# voice_agents_course

./: LICENSE  README.md  ReactUI_Livekit_Integration.md  VoiceAgents_Workshop_Presentation.pptx  pyproject.toml
agent_with_tools/: agent_with_realdata_1.py  agent_with_realdata_2.py
basic_agent/: agent.py  agent_v1.py  agent_v2.py
data/: MF_Base_OC.md  golden_ds.jsonl
deploy_to_cloud/: .dockerignore  Dockerfile  agent.py  deployment-instructions.md  livekit.toml  pyproject.toml
livekit-voice-ui/: index.html  package.json  pnpm-lock.yaml  token-server.mjs
livekit-voice-ui/src/: App.css  App.tsx
livekit_observability/: agent_with_observability.py
