[project]
name = "livekit-voice-agent"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[cartesia, openai, silero]",
    "python-dotenv",
    "ddgs>=9.14.4",
    "livekit>=1.1.13",
    "requests>=2.34.2",
    "opentelemetry-sdk>=1.30,<1.39",
    "opentelemetry-exporter-otlp-proto-http>=1.30,<1.39",
]
