[project]
name = "livekit-voice-agent"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[cartesia, openai, silero]>=1.6.4",
    "python-dotenv",
    "ddgs>=9.14.4",
    "livekit>=1.1.12",
    "requests>=2.34.2",
    "opentelemetry-sdk>=1.39.0,<=1.40.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0,<=1.40.0",
    "llama-index>=0.14.23",
    "llama-index-vector-stores-qdrant>=0.10.2",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-embeddings-ollama>=0.9.0",
    "fastembed>=0.8.0",
    "qdrant-client>=1.18.0"
]
